# cmake-learn

./: .gitignore  README.md
chap0/: note.md
chap0/102cmake_lib/xlog/: xlog.cc
chap1/: note.md
chap1/102cmake_lib/: CMakeLists.txt
chap1/102cmake_lib/test_xlog/.cache/clangd/index/: test_xlog.cc.AEC42FE4436EE48E.idx
chap1/102cmake_lib/xlog/: CMakeLists.txt  xlog.h
chap1/104test_var/: CMakeLists.txt
chap1/106cmake_system/: xlog.h
chap1/108auto_src_h/: main.cc
chap1/108auto_src_h/src/: xlog.cc
chap1/109cmake_out/test_xlog/: CMakeLists.txt
chap1/109cmake_out/xlog/: CMakeLists.txt
chap1/110add_subdirectory/: CMakeLists.txt
chap1/110add_subdirectory/lib/: libxlog.dylib
chap2/: comment.md  note.md  note1.md  note2.md
chap2/103test_message/: CMakeLists.txt
chap2/105message_color/: CMakeLists.txt
chap2/107cmake_include/: CMakeLists.txt
chap2/107cmake_include/cmake/: test_cmake.cmake
chap2/108auto_src_h/: CMakeLists.txt
chap2/108auto_src_h/include/: xlog.h  xthread.hpp
chap2/108auto_src_h/src/: xthread.cc
chap2/109cmake_out/: CMakeLists.txt
chap2/110add_subdirectory/test_xlog/: CMakeLists.txt  test_xlog.cc
chap2/110add_subdirectory/xlog/: CMakeLists.txt
chap2/201cmake_if/: CMakeLists.txt
chap2/202cmake_cache/: CMakeLists.txt
chap2/202cmake_cache/sub1/: CMakeLists.txt
chap2/203cmake_property/: CMakeLists.txt
chap2/204cmake_env/: CMakeLists.txt
chap2/205math/: CMakeLists.txt
chap2/206string/: CMakeLists.txt  main.cc
chap2/206string/sub2/: CMakeLists.txt
chap2/207list/: CMakeLists.txt
chap2/207list/sub1/: CMakeLists.txt
chap2/208foreach/: CMakeLists.txt
chap2/209macro/: CMakeLists.txt
chap2/210function/: CMakeLists.txt
chap2/210function/sub1/: CMakeLists.txt
chap3/: note.md
chap3/301expr/: CMakeLists.txt  expr.cc
chap4/: comment.md  note.md
chap4/401cmake_target_include/: CMakeLists.txt  a.cc  b.cc  main.cc
chap4/402target_compile_features/: CMakeLists.txt
chap4/403cmake_object/: CMakeLists.txt  b.cc  main.cc
chap4/404cmake_version/: CMakeLists.txt  main.cc
chap4/405cmake_debug_release/: CMakeLists.txt
chap4/405cmake_debug_release/include/: dlib.h
chap4/405cmake_debug_release/src/: dlib.cc  main.cc  slib.cc
chap5/: note.md
chap5/501cmake_install/: CMakeLists.txt  dlib.cc  main.cc  main.cpp  slib.cc  slib.cpp  test.cc
chap5/502cmake_install_file/: CMakeLists.txt
chap5/503install_directory/: CMakeLists.txt  name.md
chap5/504code/: CMakeLists.txt  install_log.txt
chap5/505component/: CMakeLists.txt
chap5/506export_package/: CMakeLists.txt  slib.cc  slib.cpp
chap5/507find/: CMakeLists.txt
chap5/508version/: CMakeLists.txt  slib.cc  slib.cc.in
chap5/509version/: main.cc
chap5/slib-1.1/config/: slibConfig.cmake
chap5/slib/config/: slibConfig-debug.cmake
chap6/: note.md
chap7/: note.md
chap7/701test_ctest/: CMakeLists.txt  test_ctest.cc
chap7/702gtest/: CMakeLists.txt  test_gtest.cc
chap7/703tar/: CMakeLists.txt  gtest_tar.cc
chap8/: note.md
chap8/project/src/samples/test_xlog/: test_xlog.cpp
chap8/project/src/samples/test_xthread_pool/: test_thread_pool.cpp
chap8/project/src/xlog/: CMakeLists.txt  xconfig.h.in  xlog.cpp  xlog_thread.cpp  xlog_thread.h
chap8/project/src/xlog/unit_test/: testmain.cpp
chap8/project/src/xthread_pool/: xthread.cpp  xthread_pool.cpp
chap8/project/src/xthread_pool/unit_test/: testmain.cpp
